--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,7 @@
 <head>
 <title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
 <%= csrf_meta_tag%>
-<%= stylesheet_link_tag 'blueprint/screen' , :media => 'screen' %>
-<%= stylesheet_link_tag 'blueprint/print' , :media => 'print' %>
+<%= stylesheet_link_tag 'blueprint/screen'%>
 </head>
 <body>
 <%= yield %>
