--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
 <title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
 <%= csrf_meta_tag%>
-<%= stylesheet_link_tag 'blueprint/screen'%>
+<%= stylesheet_link_tag '/blueprint/screen'%>
 </head>
 <body>
 <%= yield %>
