--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,28 @@
 <head>
 <title>Ruby on Rails Tutorial Sample App | <%= @title %></title>
 <%= csrf_meta_tag%>
+<!--[if lt IE9]>
+<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 <%= stylesheet_link_tag 'application'%>
+<!--[if lt IE 8]><%= stylesheet_link_tag 'ie' %><![endif]-->
 </head>
 <body>
+<div class="container">
+<header>
+<%= image_tag("logo.png", :alt => "Sample App", :class => "round") %>
+</header>
+<nav class="round">
+<ul>
+<li><%= link_to "Home", '#' %></li>
+<li><%= link_to "Help", '#' %></li>
+<li><%= link_to "Sign In", '#' %></li>
+</ul>
+</nav>
+</header>
+<section class="round">
 <%= yield %>
+</section>
+</div>
 </body>
 </html>
