--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
 <div class="container">
 <header>
-<%= image_tag("logo.png", :alt => "Sample App", :class => "round") %>
+<%= image_tag("tuneboatlogo.png", :alt => "Sample App", :class => "round") %>
 </header>
 <nav class="round">
 <ul>
