--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,9 @@
 <!--[if lt IE9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<%= stylesheet_link_tag 'application'%>
+<%= stylesheet_link_tag 'application', :media=>'screen'%>
 <!--[if lt IE 8]><%= stylesheet_link_tag 'ie' %><![endif]-->
+<%= stylesheet_link_tag 'custom', :media=>'screen'%>
 </head>
 <body>
 <div class="container">
