--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,21 +2,49 @@ body{font: 13pt Helvetica-neue, sans-serif; color:#666;}
 h1{font-size: 24pt; color:#333; padding:0px; margin:7px;}
 h2{font-size: 18pt; }
 h3{font-size: 16pt; color:#333;}
-nav{color:#333;}
+img{float:left;}
+
+
+nav{color:#999; float:right; padding: 0 0.7em; white-space: nowrap;}
+nav ul {margin:0; padding:0;}
+nav ul li {list-style-type:none; display:inline-block; padding: 0.2em 0;}
 section{padding:5px;}
+
 footer{margin-top: 30px; border-top-style:solid; border-width:2px; clear:both;}
 
-a:link {color: #333; text-decoration: none; }
-a:active {color: #666; text-decoration: none; }
+a:link {color: #ccc; text-decoration: none; }
+a:active {color: #fff; text-decoration: none; }
 a:visited {color: #999; text-decoration: none; }
-a:hover {color: #000; text-decoration: none; }
+a:hover {color: #fff; text-decoration: none; }
+
+a.signup_button{
+margin-left: auto;
+margin-right:auto;
+display:block;
+text-align:center;
+width:190px;
+color:#fff;
+background:#ccc;
+font-size:150%;
+font-weight:bold;
+padding:20px;
+}
+
+.round{
+-moz-border-radius: 10px;
+-webkit-border-radius: 10px;
+border-radius: 10px;
+}
 
 .instance{padding:10px; background-color:#ccc; margin-bottom:10px; margin-top:10px;}
 .container{margin-left:auto; margin-right:auto; width:70%; margin-top:50px;}
 .crawler{position:fixed; bottom:0;}
 
-#head{position:relative;}
-#logo{float:left;}
-#brand{float:left;}
+#head{position:relative; height:90px; 
+background:#333; border-color:#999; border-style:solid;
+border-width:thin;}
+#logo{position:absolute; left:8px;top:8px;}
+#brand{position:absolute; left:90px; top:23px;}
+
 #subtitle{clear:both; font-size:14pt bold; margin-left:60px; margin-bottom:20px;}
 
