--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Sample App</h1>
-<p>Broobaloo</p>
+<h1>Welcome to Tuneboat</h1>
+<p>The worldwide social recording network.</p>
+
+<%= link_to 'Sign up now now now', @home, :class=>"signup_button round"%>
