Resolved CSS Linking Display Issue

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
 <%= image_tag("tuneboatlogo.png", :alt => "Sample App", :class => "round") %></div><div id="brand"><h1><font color="#fff">Tuneboat</font></h1></div>
 <nav>
 <ul>
-<li><%= link_to "Home", '#' %></li>
+<li><%= link_to "Home", @home %></li>
 <li><%= link_to "Help", '#' %></li>
 <li><%= link_to "Sign In", '#' %></li>
 </ul>
