--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>Sample App</h1>
-<p>Broobaloo</p>
+<h1>Tuneboat is a place for artistic collaboration</h1>
+<p>Which means I make a site, and you look at it and think its artsy.</p>
