--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome to Tuneboat</h1>
 <p>The worldwide social recording network.</p>
 
-<%= link_to 'Sign up now now now', @home, :class=>"signup_button round"%>
+<%= link_to "Sign up now" ,  @home , :class=> "signup_button round" %>
