--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -1,6 +1,5 @@
 <!--[if lt IE9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<%= stylesheet_link_tag 'application', :media=>'screen'%>
-<%= stylesheet_link_tag 'custom', :media=>'screen'%>
+<%= stylesheet_link_tag 'application'%>
 <!--[if lt IE 8]><%= stylesheet_link_tag 'ie' %><![endif]-->
