--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,7 +10,7 @@ nav ul {margin:0; padding:0;}
 nav ul li {list-style-type:none; display:inline-block; padding: 0.2em 0;}
 section{padding:5px;}
 
-footer{margin-top: 30px; border-top-style:solid; border-width:2px; clear:both;}
+footer{text-align:center; margin-top: 30px; border-top-style:solid; border-width:2px; clear:both;}
 
 a:link {color: #ccc; text-decoration: none; }
 a:active {color: #fff; text-decoration: none; }
