--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,22 +1,59 @@
+/*BASIC STYLES*/
+
 body{font: 13pt Helvetica-neue, sans-serif; color:#666;}
 h1{font-size: 24pt; color:#333; padding:0px; margin:7px;}
 h2{font-size: 18pt; }
 h3{font-size: 16pt; color:#333;}
 img{float:left;}
 
+/*SITE LAYOUT*/
 
+/*CONTAINER*/
+.container{margin-left:auto; margin-right:auto; width:70%; margin-top:50px; padding:0px;}
+
+/*SITE_COLUMNS*/
+.main_column{float:left; width:70%; padding:0px; margin-left:0; margin-right:0; margin-top: 5px; margin-bottom:5px;}
+.side_column{background:#ccc; font-size:10pt; float:left; width:20%; padding:10px; margin-left:0; margin-right:5px; margin-top: 5px; margin-bottom:5px;}
+
+/*FIXED-POSITION CLASSES*/
+/*----------CRAWLER*/
+/*.crawler{position:fixed; bottom:0;}*/
+/*-------------------------*/
+
+/*SITE ELEMENTS*/
+
+/*HEADER ID ELEMENTS*/
+#head{position:relative; height:90px; 
+background:#333; border-color:#999; border-style:solid;
+border-width:thin;}
+#logo{position:absolute; left:8px;top:8px;}
+#brand{position:absolute; left:90px; top:23px;}
+#subtitle{clear:both; font-size:14pt bold; margin-left:60px; margin-bottom:20px;}
+
+/*CONTENT CONTAINER*/
+.content_container{padding:0px; margin:0px; position:relative;}
+
+/*USER PROFILE*/
+.user_name{padding:0px; margin:0px; position:relative; left:10px; top:10px;}
+.profile_container{padding:0px; margin:0px; position:relative; width:100%}
+.profile_body{clear:both}
+
+/*NAVIGATION*/
 nav{color:#999; float:right; padding: 0 0.7em; white-space: nowrap;}
 nav ul {margin:0; padding:0;}
 nav ul li {list-style-type:none; display:inline-block; padding: 0.2em 0;}
 section{padding:5px;}
 
+/*FOOTER*/
 footer{text-align:center; margin-top: 30px; border-top-style:solid; border-width:2px; clear:both;}
 
+/*LINKS*/
 a:link {color: #ccc; text-decoration: none; }
 a:active {color: #fff; text-decoration: none; }
 a:visited {color: #999; text-decoration: none; }
 a:hover {color: #fff; text-decoration: none; }
 
+/*SIGNUP BUTTON*/
 a.signup_button{
 margin-left: auto;
 margin-right:auto;
@@ -30,21 +67,10 @@ font-weight:bold;
 padding:20px;
 }
 
+/*BOX STYLES*/
 .round{
 -moz-border-radius: 10px;
 -webkit-border-radius: 10px;
 border-radius: 10px;
 }
-
-.instance{padding:10px; background-color:#ccc; margin-bottom:10px; margin-top:10px;}
-.container{margin-left:auto; margin-right:auto; width:70%; margin-top:50px;}
-.crawler{position:fixed; bottom:0;}
-
-#head{position:relative; height:90px; 
-background:#333; border-color:#999; border-style:solid;
-border-width:thin;}
-#logo{position:absolute; left:8px;top:8px;}
-#brand{position:absolute; left:90px; top:23px;}
-
-#subtitle{clear:both; font-size:14pt bold; margin-left:60px; margin-bottom:20px;}
 
