--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,19 @@
+
+<div class="profile_container">
+
+<div class="side_column round">
+<p><strong>Name</strong>  <%= @user.name %></strong></p>
+<p><strong>URL</strong>  <%= link_to user_path(@user), user_path(@user) %>
+</div>
+
+<div class="main_column">
 <h1>
 <%= gravatar_for(@user)%>
-<%= @user.name %>
+<div class="user_name"><%= @user.name %></div>
 </h1>
+<div class="profile_body">
+
+</div>
+</div>
+
+</div>
