Added Signup forms

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,6 +67,9 @@ font-weight:bold;
 padding:20px;
 }
 
+/*FORMS*/
+div.field, div.actions {margin-bottom:10px;}
+
 /*BOX STYLES*/
 .round{
 -moz-border-radius: 10px;
