--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -77,3 +77,43 @@ div.field, div.actions {margin-bottom:10px;}
 border-radius: 10px;
 }
 
+/*ERROR MESSAGES*/
+div #error_explainations{ 
+	color:#fff;
+	padding:20px;
+	background:rgb(100, 0, 0);
+	margin-bottom:10px;
+	}
+.field_with_errors{
+border-style:solid;
+border-color:rgb(100, 0, 0);
+border-width:3px;
+}
+/*FLASH MESSAGE STYLES*/
+.success{
+color:rgb(0, 100, 0);
+background:rgb(100, 255, 50); 
+margin-top:5px; 
+padding:10px; 
+border-style:solid; 
+border-width:3px; 
+border-color:rgb(0, 100, 0)
+}
+.error{
+background:rgb(255, 100, 50); 
+margin-top:5px; 
+padding:10px; 
+border-style:solid; 
+border-width:3px; 
+border-color:rgb(100, 0, 0)
+}
+.notice{
+background:rgb(200, 200, 50); 
+margin-top:5px; 
+padding:10px; 
+border-style:solid; 
+border-width:3px; 
+border-color:rgb(100, 100, 0)
+}
+
+
