--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
 <div class="container">
 <%= render 'layouts/header' %>
 <section class="content_container">
+<% flash.each do |key, value| %>
+	<div class="flash <%= key %> round">
+		<%= value %>
+	</div>
+<% end %>
 <%= yield %>
 </section>
 <%= render 'layouts/footer' %>
