--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -84,7 +84,7 @@ div #error_explainations{
 	background:rgb(100, 0, 0);
 	margin-bottom:10px;
 	}
-.field_with_errors{
+input .field_with_errors{
 border-style:solid;
 border-color:rgb(100, 0, 0);
 border-width:3px;
