--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
 <ul>
 <li><%= link_to "Home", root_path %></li>
 <li><%= link_to "Help", help_path %></li>
-<li><%= link_to "Log In", '#' %></li>
+<li><%= link_to "Sign in", signin_path %></li>
 </ul>
 </nav>
 </div>
