--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -100,6 +100,7 @@ border-width:3px;
 border-color:rgb(0, 100, 0)
 }
 .error{
+color:rgb(100, 0, 0);
 background:rgb(255, 100, 50); 
 margin-top:5px; 
 padding:10px; 
@@ -108,6 +109,7 @@ border-width:3px;
 border-color:rgb(100, 0, 0)
 }
 .notice{
+color:rgb(100, 100, 0);
 background:rgb(200, 200, 50); 
 margin-top:5px; 
 padding:10px; 
