--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,9 +49,11 @@ footer{text-align:center; margin-top: 30px; border-top-style:solid; border-width
 
 /*LINKS*/
 a:link {color: #ccc; text-decoration: none; }
-a:active {color: #fff; text-decoration: none; }
+a:active {color: #111; text-decoration: none; }
 a:visited {color: #999; text-decoration: none; }
-a:hover {color: #fff; text-decoration: none; }
+a:hover {color: #222; text-decoration: none; }
+
+header a:hover {color: #fff; text-decoration: none; }
 
 /*SIGNUP BUTTON*/
 a.signup_button{
