--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,10 +4,17 @@
 <div id="brand"><h1><font color="#fff"> Tuneboat </font> </h1> </div>
 <nav>
 <ul>
-<li><%= link_to "Home", root_path %></li>
-<li><%= link_to "Help", help_path %></li>
-<li><%= link_to "Sign in", signin_path %></li>
-</ul>
+      <li><%= link_to "Home", root_path %></li>
+      <% if signed_in? %>
+      <li><%= link_to "Profile", current_user %></li>
+      <% end %>
+      <li><%= link_to "Help", help_path %></li>
+      <% if signed_in? %>
+      <li><%= link_to "Sign out", signout_path, :method => :delete %></li>
+      <% else %>
+      <li><%= link_to "Sign in", signin_path %></li>
+      <% end %>
+    </ul>
 </nav>
 </div>
 </header>
