--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
-<header>
-<div id="head" class="round general">
+<header class="round general">
+<div id="head" >
 <div id="logo"><%= link_to logo, root_path %></div>
 <div id="brand"><h1><font color="#fff"> Tuneboat </font> </h1>
 </div>
