--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-
-<%= link_to "Sign up now!",  signup_path , :class=> "signup_button round" %>
+<div class="lander"><%= link_to lander, signup_path %></div>
+<div class="expander">
+<%= link_to "Sign up now!",  signup_path , :class=> "signup_button" %>
+</div>
