--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,15 +1,19 @@
 /*BASIC STYLES*/
 
-body{font: 12pt Helvetica-neue, sans-serif; color:#666;}
+body{font: 12pt Helvetica-neue, sans-serif; color:#666; background:#999;}
 h1{font-size: 24pt; color:#333; padding:0px; margin:7px;}
 h2{font-size: 16pt; }
 h3{font-size: 14pt; color:#333;}
 img{float:left;}
+header{z-index:3;position:relative; height:67px; 
+background:#333; border-color:#999; border-style:solid;
+border-width:thin; width:100%}
 
 /*SITE LAYOUT*/
 
 /*CONTAINER*/
-.container{margin-left:auto; margin-right:auto; width:95%; height:95%; margin-top:auto; margin-bottom:auto; padding:0px;}
+.container{position:relative; margin-left:0; margin-right:0; width:100%; height:100%; margin-top:0; margin-bottom:0; padding:0px;}
+.content_container{position:relative; width:100%; height:100%; padding:0px; margin:0px; }
 
 /*SITE_COLUMNS*/
 .main_column{float:left; width:70%; padding:0px; margin-left:0; margin-right:0; margin-top: 5px; margin-bottom:5px;}
@@ -23,15 +27,10 @@ img{float:left;}
 /*SITE ELEMENTS*/
 
 /*HEADER ID ELEMENTS*/
-#head{position:relative; height:67px; 
-background:#333; border-color:#999; border-style:solid;
-border-width:thin;}
+#head{}
 #logo{position:absolute; left:8px;top:8px;}
 #brand{position:absolute;  left:45px; top:13px;}
 #subtitle{clear:both; font-size:14pt bold; margin-left:60px; margin-bottom:20px;}
-
-/*CONTENT CONTAINER*/
-.content_container{width:100%; height:100%; padding:0px; margin:0px; position:relative;}
 
 /*USER PROFILE*/
 .user_name{padding:0px; margin:0px; position:relative; left:10px; top:10px;}
@@ -47,10 +46,11 @@ section{padding:5px;}
 
 /*FOOTER*/
 footer{position:fixed;
-width:95%;
-padding:3px;
-margin-left:auto;
-margin-right:auto;
+z-index:3;
+width:97%;
+padding:0px;
+margin-left:0;
+margin-right:0;
 bottom:-10px;
 text-align:center;
 height:40px; 
@@ -69,27 +69,35 @@ header a:hover {color: #fff; text-decoration: none; }
 /*LANDER*/
 
 /*SIGNUP BUTTON*/
+.expander{
+margin-left:-20px;
+margin-top: 5px;
+}
+.lander{
+z-index:1;
+position:fixed;
+vertical-align:center;
+left:15%;
+top:-175px;
+padding:20%;
+}
 a.signup_button{
 z-index:2;
-margin-left: 0px;
-margin-right:0px;
-display:block;
-text-align:center;
-width:100%;
-padding-bottom:10%;
-padding-top:10%;
-margin-top:5px;
-margin-bottom:auto;
-color:#333;
-background:rgba(50, 100, 150, .8);
+font-size: 250%; font-style:bold;
+color: #222;
+position:fixed;
+padding-top:2%;
+padding-left:10%;
+padding-bottom:40%;
+margin-top:3%;
+margin-bottom:50px;
+width:105%;
+height:100%;
+text-shadow: 1px 1px 3px #fff, 1px 1px 70px #fff;
 
-text-align: center;
-	font-size: 300%; font-style:bold;
-	color: #222;
-	text-shadow: 1px 1px 3px #fff, 1px 1px 70px #fff;
-box-shadow: 5px 5px 20px #666;  /*For IE9/Final CSS3 spec*/
--moz-box-shadow: 5px 5px 20px #666;  /*For Firefox*/
--webkit-box-shadow: 5px 5px 20px #666;  /*For Chrome/Safari*/
+box-shadow: -5px -5px -20px #666;  /*For IE9/Final CSS3 spec*/
+-moz-box-shadow: -5px -5px -20px #666;  /*For Firefox*/
+-webkit-box-shadow: -5px -5px -20px #666;  /*For Chrome/Safari*/
 }
 
 a.signup_button:hover {
