--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,16 @@
 <body>
 <div class="container">
 <%= render 'layouts/header' %>
-<section class="content_container">
+<div class="content_container">
 <% flash.each do |key, value| %>
 	<div class="flash <%= key %> round">
 		<%= value %>
 	</div>
 <% end %>
 <%= yield %>
-</section>
-<%= debug(params)  if Rails.env.development?%>
 </div>
+<%= debug(params)  if Rails.env.development?%>
 <%= render 'layouts/footer' %>
+</div>
 </body>
 </html>
