--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 <div class="lander"><%= link_to lander, signup_path %></div>
-<div class="expander">
-<%= link_to "Sign up now!",  signup_path , :class=> "signup_button" %>
+
+<div class="expander"><strong>
+<%= link_to "Sign up now!",  signup_path , :class=> "signup_button" %></strong>
 </div>
+<div class="lander_text"><p><font size="6em"  color="	#344152"><strong>Tuneboat</strong></font><br/>&nbsp; is an online, <font size="5em" ><strong>FREE</strong></font><br/>
+&nbsp; social recording network.</p><p>  <font size="5em" ><strong>Record </strong></font>projects with the <br/>&nbsp; &nbsp click of a button, <br/>&nbsp; <font size="5em" ><strong>Play </strong></font> your tracks all at once,</p> <p>&nbsp;   &nbsp;  <font size="5em" ><strong>Collaborate</strong></font> with musicians <br/>&nbsp;  &nbsp;  &nbsp; &nbsp; &nbsp; from all over the world!</p></div>
