--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,21 @@
-<div class="general content round" >
+<div class="general content round"  style="text-align:center;">
 <h2>Sign up</h2>
 <%= form_for(@user) do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
 	<div class = "field">
-		<%= f.label :name %>
+		<%= f.label :name %><br/>
 		<%= f.text_field :name%>
 	</div>
 		<div class = "field">
-		<%= f.label :email %>
+		<%= f.label :email %><br/>
 		<%= f.text_field :email%>
 	</div>
 		<div class = "field">
-		<%= f.label :password %>
+		<%= f.label :password %></br>
 		<%= f.password_field :password%>
 	</div>
 		<div class = "field">
-		<%= f.label :password_confirmation, "Confirmation" %>
+		<%= f.label :password_confirmation, "Confirmation" %></br>
 		<%= f.password_field :password_confirmation %>
 	</div>
 		<div class = "actions">
