--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>Tuneboat is a place for artistic collaboration</h1>
+<div class="general content round">
+<h2>Tuneboat is a place for artistic collaboration</h2>
 <p>Which means I make a site, and you look at it and think its artsy.</p>
+</div>
