pushing to heroku

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
 <ul>
 <li><%= link_to "About", about_path %></li>
 <li><%= link_to "Contact", contact_path %></li>
-<li><%= link_to "TuneDocs", 'http://tuneboat.com' %></li>
-<li><%= link_to "Brainpit", 'http://tuneboat.com/brain' %></li>
+<li><%= link_to "TuneDocs", 'http://audiovisualsoul.com/tuneboat/docs' %></li>
+<li><%= link_to "Brainpit", 'http://audiovisualsoul.com/tuneboat/docs/brain' %></li>
 </nav>
 </footer>
