--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,16 +3,22 @@
 
 <div class="side_column round">
 <p><strong>Name</strong>  <%= @user.name %></strong></p>
-<p><strong>URL</strong>  <%= link_to user_path(@user), user_path(@user) %>
+<p><strong>URL</strong>  <%= link_to user_path(@user), user_path(@user) %></p><p>
+ <strong>Microposts</strong> <%= @user.microposts.count %></p>
 </div>
 
-<div class="main_column">
+<div class="main_column general content round">
 <h1>
 <%= gravatar_for(@user)%>
 <div class="user_name"><%= @user.name %></div>
 </h1>
 <div class="profile_body">
-
+	<% unless @user.microposts.empty? %>
+        <div class="microposts" summary="User microposts">
+          <%= render @microposts %>
+        </div>
+        <%= will_paginate @microposts %>
+      <% end %>
 </div>
 </div>
 
