--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,6 +1,6 @@
-<div class="micropost">
-  <span class="content"><%= micropost.content %></span>
-    <span class="timestamp">
-      Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+<div class="micropost general round">
+  <span><%= micropost.content %></span>
+    <span class="timestamp" >
+      <font style="color:#999;"><small>Posted <%= time_ago_in_words(micropost.created_at) %> ago.</small></font>
     </span>
 </div>
