--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,8 +33,8 @@ border-width:thin; width:100%}
 .content_container{position:relative; width:100%; height:100%; padding:0px; margin:0px; }
 
 /*SITE_COLUMNS*/
-.main_column{float:left; width:70%; padding:0px; margin-left:0; margin-right:0; margin-top: 5px; margin-bottom:5px;}
-.side_column{background:#ccc; font-size:10pt; float:left; width:20%; padding:10px; margin-left:0; margin-right:5px; margin-top: 5px; margin-bottom:5px;}
+.main_column{position:relative; float:left; width:60%; padding:0px; margin-left:0px; margin-right:0px; margin-top: 5px; margin-bottom:5px;}
+.side_column{position:relative; background:#ccc; font-size:10pt; float:left; width:20%; padding:10px; margin-left:0; margin-right:1px; margin-top: 5px; margin-bottom:5px;}
 
 /*FIXED-POSITION CLASSES*/
 /*----------CRAWLER*/
