--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,11 +1,15 @@
 <div class="micropost round">
+<div class="audio" style="padding:5px;"><%= audio_tag("http://localhost/tomorrow.mp3", :autoplay => false, :preload => "auto", :controls => true) %></div>
   <span><%= micropost.content %></span>
-    <span class="timestamp" >
+    <div style="padding:5px;"><span class="timestamp" >
 <small>&nbsp; Posted <%= time_ago_in_words(micropost.created_at) %> ago.</small>
     </span>
     
-      <% if current_user.admin? %>
+      <% if current_user?(@user) %>
   | <%= link_to "delete", micropost, :method => :delete, :confirm => "You sure?",
                                 :title => "Delete Micropost" %>
+<% else%>
   <% end %>
+  
+  </div>
 </div>
