Fixed lost data

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,11 +6,13 @@
 </div>
 
 <div class="main_column general content round">
+<div class="profileusername">
 <h1>
 <%= gravatar_for(@user)%>
 <div class="user_name"><%= @user.name %></div>
 </h1>
-<div> <%= render 'shared/playall' %> </div>
+</div>
+<div> <%= render 'shared/transport' %> </div>
 <div class="profile_body">
 <% if (signed_in?)  && ( is_user_page?)%>
         <%= render 'shared/micropost_form' %>
