--- a/app/assets/stylesheets/userprofile.css.scss
+++ b/app/assets/stylesheets/userprofile.css.scss
@@ -2,4 +2,5 @@
 .user_name{color:#fff; padding:0px; margin:0px; position:relative; left:10px; top:10px;}
 .profile_container{padding:0px; margin:0px; position:relative; width:100%;}
 .profile_body{clear:both; position:relative; width:100%;padding:10px;}
+.profileusername{margin:10px; padding:10px;}
 
