--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -5,7 +5,7 @@
 <small>&nbsp; Posted <%= time_ago_in_words(micropost.created_at) %> ago.</small>
     </span>
     
-      <% if current_user?(@user) %>
+    <% if current_user?(micropost.user) %>
   | <%= link_to "delete", micropost, :method => :delete, :confirm => "You sure?",
                                 :title => "Delete Micropost" %>
 <% else%>
