--- a/app/assets/stylesheets/micropost.css.scss
+++ b/app/assets/stylesheets/micropost.css.scss
@@ -1,5 +1,5 @@
-.micropost{position:relative; width:90%; background-color:#333; color:#fff; padding:20px; font-size:10pt; margin-top:5px; margin-bottom: 5px; border-bottom:0px; border-left:0px; border-right:0px;}
+.micropost{position:relative;  width:100%;  background-color:#333; color:#fff; padding:20px; font-size:12pt; margin-top:5px; margin-bottom: 5px; border-bottom:0px; border-left:0px; border-right:0px;}
 
-.micropost_form{text-align:center; padding:30px;}
+.micropost_form{padding:30px;}
 
 .timestamp{font-size:9pt; clear:both; color:#999;}
