--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,8 +1,65 @@
 .master{
-background:#666;
-padding:5px; 
+min-width: 850px;
+background:rgba(0,0,0,.8);
+position:relative;
+float:left;
+top:-35px;
+padding:5px;
+width:100%;
 margin:5px;
 border: .1em;
-border-color:#ccc;
-border-style:solid;
 }
+.masterTrans{
+position:relative;
+float:left;
+}
+
+.masterButtons{
+position:relative;
+top:2px;
+left:2px;
+}
+
+.masterVolume{
+color:#fff;
+padding:5px;
+position:relative; 
+float:left; 
+margin-left:10px;
+top:10px;
+
+}
+
+.masterControl{
+
+}
+.shadow {
+-moz-box-shadow:2px 10px 4px rgba(0,0,0,.3);
+-webkit-box-shadow:  2px 10px 4px rgba(0,0,0,.3);
+box-shadow:  2px 10px 4px rgba(0,0,0,.3);
+}
+.highlight {
+-moz-box-shadow:1px -1px 0px rgba(255,255,255,.4);
+-webkit-box-shadow:1px -1px 0px rgba(255,255,255,.4);
+box-shadow:1px -1px 0px rgba(255,255,255,.4);
+}
+
+ input[type="range"]{
+   -webkit-appearance:none !important;
+   height:10px; width:200px; background:#ccc;
+ }
+
+ input[type="range"]::-webkit-slider-thumb{
+	-webkit-appearance:none !important;  
+	
+	height:40px; width:10px; background:rgba(50, 220, 180, .8);
+	
+	-moz-box-shadow:2px -2px 4px rgba(0,0,0,.3);
+	-webkit-box-shadow:  2px -2px 4px rgba(0,0,0,.3);
+	box-shadow:  2px -2px 4px rgba(0,0,0,.3);
+	
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+ }
+
