--- a/app/assets/stylesheets/userprofile.css.scss
+++ b/app/assets/stylesheets/userprofile.css.scss
@@ -1,6 +1,26 @@
 /*USER PROFILE*/
-.user_name{color:#fff; padding:0px; margin:0px; position:relative; left:10px; top:10px;}
-.profile_container{padding:0px; margin:0px; position:relative; width:100%;}
-.profile_body{clear:both; position:relative; width:100%;padding:10px;}
+.user_name{color:#fff; font-size:12pt; padding:0px; margin:0px; position:relative; left:10px; top:10px;}
+
+.profile_container{width:100%;  min-width:900px;overflow:hidden; padding:0px; margin:0px; position:relative; }
+
+.main_column_body{width:100%; min-width:500px; position:relative; padding:10px;}
+
 .profileusername{margin:10px; padding:10px;}
+
+/*SITE_COLUMNS*/
+.main_column{min-width:600px; position:relative; float:left; padding:0px; margin-left:0px; margin-right:0px; margin-top: 5px; margin-bottom:5px;}
+
+.project_column{position:relative; background:#666; font-size:10pt; float:left; width:200px; height:800px;padding:10px; margin-left:0; margin-right:1px; margin-top: 5px; margin-bottom:5px;}
+
+.info{padding:10px; margin:5px; margin-left:25px;}
+.user_info_name_logo{}
+
+/*UPLOAD_FORM*/
+.audio_upload_form{
+width:100%;
+margin-left:auto;
+margin-right:auto;
+padding:20px;
+background:#333;
+}
 
