--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,7 @@
-<footer class="round general">
+<footer class="round">
+<div class="master round highlight"> 
+<%= render 'shared/transport' %> 
+<div class="footernav">
 <nav>
 <ul>
 <li><%= link_to "About", about_path %></li>
@@ -6,4 +9,6 @@
 <li><%= link_to "TuneDocs", 'http://audiovisualsoul.com/tuneboat/docs' %></li>
 <li><%= link_to "Brainpit", 'http://audiovisualsoul.com/tuneboat/docs/brain' %></li>
 </nav>
+</div>
+</div>
 </footer>
