Projects and comments added

--- a/app/assets/stylesheets/userprofile.css.scss
+++ b/app/assets/stylesheets/userprofile.css.scss
@@ -12,7 +12,7 @@
 
 .project_column{display:inline-block; background-color:rgb(210,210,210);position:relative; font-size:10pt; float:left; height:550px; width:200px; padding:0px; margin-left:0; margin-right:0; margin-top: 0; }
 
-.third_column{width:200px; margin:0; padding:0; float:left; height:550px; background-color:rgb(210,210,210); display:inline-block;}
+.third_column{width:200px; margin:0; padding:0; float:right; height:550px; background-color:rgb(210,210,210); display:inline-block;}
 
 .info{padding:10px; margin:5px; margin-left:25px;}
 .user_info_name_logo{}
