--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -2,11 +2,10 @@
 <div style="margin:0; height:40px;">
 <div class="contentPad" style="position:relative;">
 <div style="position:relative; top:-30; right:-30;">
-    <%= link_to gravatar_for(feed_item.user, :size =>30), feed_item.user, %>
 </div>
 <div>
     <span class="user">
-      <%= link_to feed_item.user.name, feed_item.user %>
+      <%= link_to feed_item.project, feed_item.project %>
     </span>
     <span><%= feed_item.content %></span>
     <span class="timestamp">
