--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<footer class="round">
-<div class="master "> 
+<footer>
+<div class="master"> 
 <%= render 'shared/transport' %> 
 <div class="footernav">
 <nav>
