--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,11 +1,9 @@
 <li>
-<div class="contentPad">
-  <div class="userLinks" style="margin:5px; font-size:13pt;">
+  <div class="userLinks" style="margin:5px; font-size:13pt; padding:10px;">
   <%= link_to project.name, project, :class=>"userLinks" %>
   <% if current_user.admin? %>
   | <%= link_to "delete", project, :method => :delete, :confirm => "You sure?",
                                 :title => "Delete Project" %>
   <% end %>
-  </div>
   </div>
 </li>
