--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,3 +1,5 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.comment{width:400px; clear:both; float:left; padding:5px; margin:2px; background-color:#ccc; border:1; border-style:solid; border-width:1px; border-color:#333; border-radius:5px;}
