--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,12 +1,13 @@
 /*FOOTER*/
 footer{
 position:relative;
-display:inline-block;
 z-index:3;
 width:1000px;
 height:45px;
 padding:0;
-margin:0;
+margin-left:auto;
+margin-right:auto;
+clear:both;
 }
 .footernav{position:relative; float:right;}
 
