--- a/app/assets/stylesheets/userprofile.css.scss
+++ b/app/assets/stylesheets/userprofile.css.scss
@@ -1,30 +1,25 @@
 /*USER PROFILE*/
-.user_name{color:#fff; font-size:12pt; padding:0px; margin:0px; position:relative; left:10px; top:10px;}
+.user_name{color:#fff; font-size:12pt; padding:0px; margin:5px; position:relative;}
 
-.profile_container{width:1000px; padding:0px; margin:0px; position:relative; display:inline-block; }
+.profile_container{width:1000px; padding:0px; margin:0px; position:relative; float:left; display:inline-block; background:#fff;}
 
-.main_column_body{width:600px; display:inline-block; position:relative; padding:0; margin:0px; float:left;}
+.main_column_body{width:600px; padding:0; margin:0px;  position:relative; float:left; display:inline-block; }
 
 .profileusername{margin:10px; padding:10px;}
 
 /*SITE_COLUMNS*/
-.main_column{width:600px; display:inline-block; position:relative; float:left; padding:0px; margin-left:0px; margin-right:0px; margin-top:0; margin-bottom:0px;}
+.main_column{width:600px; padding:0px; margin:0; position:relative; float:left; display:inline-block; }
 
-.project_column{display:inline-block; background-color:rgb(210,210,210);position:relative; font-size:10pt; float:left; height:550px; width:200px; padding:0px; margin-left:0; margin-right:0; margin-top: 0; }
+.project_column{ background-color:rgb(210,210,210); font-size:10pt;  height:100%; width:200px; padding:0px; margin:0;  position:relative; float:left; display:inline-block; border-radius:5px; }
 
-.third_column{width:200px; margin:0; padding:0; float:right; height:550px; background-color:rgb(210,210,210); display:inline-block;}
+.third_column{ width:200px; margin:0; padding:0; height:550px; background-color:rgb(210,210,210);  position:relative; float:right; display:inline-block; border-radius:5px; }
 
 .info{padding:10px; margin:5px; margin-left:25px;}
 .user_info_name_logo{}
 
 /*UPLOAD_FORM*/
 .audio_upload_form{
-width:200px;
-position:relative;
-float:left;
-margin:0;
-padding:0;
 }
 
-.tuneboatrecorder{margin:0; padding:0; clear:both; display:inline-block; float:left;}
+.tuneboatrecorder{}
 
