--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -2,6 +2,7 @@
 <div class="user_info_name_logo">
   <a href="<%= user_path(current_user) %>">
     <%= gravatar_for @user, :size => 200 %>
+    </a>
     <div class="user_name" style="clear:both;">
       <%= @user.name %>
     </div>
@@ -12,6 +13,9 @@
     </div>
     <div class="contentPad">
     <%= @user.description%>
+    <% if current_user == @user %>
+    <%= link_to "Edit Profile", edit_user_path(current_user) %>
+    <% end%>
+    
     </div>
-  </a>
 </div>
